Closed Bug 1287425 Opened 8 years ago Closed 8 years ago

[Static Analysis][Uninitialized scalar field] In function FuncImport

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: andi, Assigned: andi)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: CID 1363753)

Attachments

(1 file)

The Static Analysis tool Coverity detected that members of |pod| are not initialised in the default constructor of FuncImport.
In order to integrate our static analysis tool based on clang - AST we need to fix these issues.
Comment on attachment 8771956 [details]
Bug 1287425 - initialise all members from FuncImport in default ctor.

Stealing.  Just so I understand, this is just to make it clear to the analysis, right?  I believe these are actually initialized before use.
Attachment #8771956 - Flags: review?(jorendorff) → review+
(In reply to Luke Wagner [:luke] from comment #2)
> Comment on attachment 8771956 [details]
> Bug 1287425 - initialise all members from FuncImport in default ctor.
> 
> Stealing.  Just so I understand, this is just to make it clear to the
> analysis, right?  I believe these are actually initialized before use.

Exactly, we would like to initialise all our resources in constructor as much as possible.
Attachment #8771956 - Flags: review+ → review?(luke)
for no reason the review still is not r+ in mozreview, that's why i've added you as a reviewer maybe this time works.
Attachment #8771956 - Flags: review?(luke) → review+
Pushed by bpostelnicu@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/8056a7c17e64
initialise all members from FuncImport in default ctor. r=luke
https://hg.mozilla.org/mozilla-central/rev/8056a7c17e64
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: