Bug 1287425 - initialise all members from FuncImport in default ctor. r=luke

MozReview-Commit-ID: LFzvXv638qF